# AIDT2026

./: LICENSE  README.md  pyproject.toml
data/: README.md
scripts/: build_splits.py  run_metrics_experiment.py  run_scores_experiment.py
src/metrics/: usefulness_ilr.py
src/scores/: __init__.py  ic.py  substitution_complementarity_scores.py
